The profile command should not take S or X database locks

XMLWordPrintableJSON

    • Fully Compatible
    • v5.0, v4.4, v4.2
    • Execution Team 2021-06-14
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The profile command uses Shared and Exclusive locks to observe and change a database's profiling level, respectively.

      These locks are extremely impactful and block read and write operations. Some services poll the profiling state once per minute. We should investigate how to stop taking such strong locks for this command.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: