SERVER-55034 profile command takes intent locks when accessing profile settings

(cherry picked from commit 74fbf87121cd1d3c94dbaf5c4bed12456d2f1ccb)